Поправлена ссылка на jQuery, добавлена ссылка на GitHub

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
 <hr/>
 <footer class="container text-muted text-right">
+	<a href="https://github.com/maximal/reduplicator">GitHub</a>
+	&middot;
 	© <a href="http://maximals.ru">MaximAL</a>, <a href="http://sijeko.ru">Sijeko</a> 2015
 </footer>
 
@@ -56,7 +58,7 @@
 <!-- Скрипты
      ======= -->
 <!-- jQuery -->
-<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <!-- Bootstrap -->
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
