--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<label for="inp-text"></label>
-			<input type="text" name="text" id="inp-text" class="form-control input-lg" />
+			<input type="text" name="text" id="inp-text" class="form-control input-lg" autofocus="autofocus" />
 		</div>
 	</div>
 	<hr/>
