Добавлена ссылка на Телеграм-версию

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
 <hr/>
 <footer class="container text-muted text-right">
+	Телеграм-версия&nbsp;— <a href="https://telegram.me/HuificatorRobot">@HuificatorRobot</a>
+	&middot;
 	<a href="https://github.com/maximal/reduplicator">GitHub</a>
 	&middot;
 	© <a href="http://maximals.ru">MaximAL</a>, <a href="http://sijeko.ru">Sijeko</a> 2015
